--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,5 @@
     <div class="center">I am from index.html file</div>
     <hr>
     <div id="app"></div>
-  <script type="text/javascript" src="app.bundle.js"></script></body>
+  </body>
 </html>
